Bug 357777 - Incorrect characters in Subject field when I use Share On...-> Mail action
Summary: Incorrect characters in Subject field when I use Share On...-> Mail action
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-10 03:20 UTC by André Marcelo Alvarenga
Modified: 2016-01-10 07:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments
Screenshot (79.62 KB, image/png)
2016-01-10 03:20 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-01-10 03:20:19 UTC
See screenshot.

This happens when I right-click in a article with quotation marks in title.

Reproducible: Always
Comment 1 André Marcelo Alvarenga 2016-01-10 03:20:47 UTC
Created attachment 96557 [details]
Screenshot
Comment 2 Laurent Montel 2016-01-10 06:27:34 UTC
I confirm it.
Comment 3 Laurent Montel 2016-01-10 07:07:32 UTC
Git commit 24ab60180dd14d5ead7e8daaa2906ce520707767 by Montel Laurent.
Committed on 10/01/2016 at 07:06.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 357777 - Incorrect characters in Subject field when I use Share On...-> Mail action

FIXED-IN: 5.1.2

M  +3    -2    akregator/src/mainwidget.cpp
M  +8    -0    akregator/src/utils.cpp
M  +2    -0    akregator/src/utils.h

http://commits.kde.org/kdepim/24ab60180dd14d5ead7e8daaa2906ce520707767