Fix Bug 357777 - Incorrect characters in Subject field when I use Share On...-> Mail action

FIXED-IN: 5.1.2
BUG: 357777