src/mainwidget.cpp
@@ -25,6 +25,7 @@
 */
 
 #include "mainwidget.h"
+#include "utils.h"
 #include "actionmanagerimpl.h"
 #include "addfeeddialog.h"
 #include "articlelistview.h"
@@ -371,7 +372,7 @@ void Akregator::MainWidget::sendArticle(bool attach)
         const Article article =  m_selectionController->currentArticle();
         if (!article.isNull()) {
             text = article.link().toDisplayString().toLatin1();
-            title = article.title();
+            title = Akregator::Utils::convertHtmlTags(article.title());
         }
     }
 
@@ -944,7 +945,7 @@ void Akregator::MainWidget::currentArticleInfo(QString &link, QString &title)
     }
     if (article.link().isValid()) {
         link = article.link().url();
-        title = article.title();
+        title = Utils::convertHtmlTags(article.title());
     }
 }
 
